--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
 * {
-	margin: 0;
+    margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -49,6 +49,10 @@ body {
 
             span {
                 font-weight: bold;
+            }
+
+            * {
+                max-width: 100%;
             }
 
             &.receive {
